--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   },
   "dependencies": {
     "cypress": "^10.0.3",
+    "formik": "^2.4.5",
     "next": "^12.1.5",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.16",
