--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "export": "next export"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.18",
+    "@mui/material": "^5.14.18",
     "cypress": "^10.0.3",
     "formik": "^2.4.5",
     "next": "^12.1.5",
